[tool.poetry]
name = "articles"
version = "0.1.0"
description = "Solution for a job screening test"
authors = ["Bartosz Zaczyński <bartosz.zaczynski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask_restful = "^0.3.7"
flask_sqlalchemy = "^2.4"
numpy = "^1.17"
pandas = "^0.25.1"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
articles-import = "articles.import_data:main"
articles-serve = "articles.rest_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
